--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "prototype",
   "version": "0.4.2",
   "description": "",
-  "main": "index.js",
+  "main": "backendAPI.js",
   "scripts": {
+    "start": "node backendAPI.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
